cpp/collatz-conjecture/run-tests-cpp.txt
Running automated test file(s):


===============================================================================

Running: make clean
rm -rf ./build

real	0m0.005s
user	0m0.000s
sys	0m0.004s

===============================================================================

export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"

===============================================================================

Running: make coverage | ansifilter
rm -rf ./build
mkdir -pv ./build
mkdir: created directory './build'

cd ./build; export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"; cmake -DEXERCISM_RUN_ALL_TESTS=1 -DCMAKE_EXPORT_COMPILE_COMMANDS=1 -G 'Unix Makefiles' ../; if make; then printf "\n=== All Tests Passed ===\n"; else printf "\n=== Test Failure ===\n"; false; fi
-- The CXX compiler identification is GNU 10.2.1
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Configuring done
-- Generating done
-- Build files have been written to: /home/vpayno/git_vpayno/exercism-workspace/cpp/collatz-conjecture/build
make[1]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/collatz-conjecture/build'
make[2]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/collatz-conjecture/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/collatz-conjecture/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/collatz-conjecture/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/collatz-conjecture/build'
[ 25%] Building CXX object CMakeFiles/collatz-conjecture.dir/collatz_conjecture_test.cpp.o
[ 50%] Building CXX object CMakeFiles/collatz-conjecture.dir/collatz_conjecture.cpp.o
[ 75%] Building CXX object CMakeFiles/collatz-conjecture.dir/test/tests-main.cpp.o
[100%] Linking CXX executable collatz-conjecture
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/collatz-conjecture/build'
[100%] Built target collatz-conjecture
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/collatz-conjecture/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/collatz-conjecture/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/collatz-conjecture/build'
===============================================================================
All tests passed (6 assertions in 6 test cases)

make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/collatz-conjecture/build'
[100%] Built target test_collatz-conjecture
make[2]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/collatz-conjecture/build'
make[1]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/collatz-conjecture/build'

=== All Tests Passed ===

find . -regextype posix-egrep -regex "^.*(tests-main|CompilerId).*[.](gcda|gcno)$" -print -delete
./build/CMakeFiles/3.22.2/CompilerIdCXX/CMakeCXXCompilerId.gcno
./build/CMakeFiles/collatz-conjecture.dir/test/tests-main.cpp.gcno
./build/CMakeFiles/collatz-conjecture.dir/test/tests-main.cpp.gcda

find . -regextype posix-egrep -regex "^.*[.](gcda|gcno)1284"

gcovr --print-summary
------------------------------------------------------------------------------
                           GCC Code Coverage Report
Directory: .
------------------------------------------------------------------------------
File                                       Lines    Exec  Cover   Missing
------------------------------------------------------------------------------
collatz_conjecture.cpp                        13      13   100%   
collatz_conjecture_test.cpp                   18      18   100%   
test/catch.hpp                                32      27    84%   1642-1643,2227,2229,2560
------------------------------------------------------------------------------
TOTAL                                         63      58    92%
------------------------------------------------------------------------------
lines: 92.1% (58 out of 63)
branches: 38.7% (48 out of 124)

real	0m9.419s
user	0m8.687s
sys	0m0.728s

===============================================================================

cmake-format --in-place CMakeLists.txt

real	0m0.135s
user	0m0.096s
sys	0m0.041s

===============================================================================

cmake-lint CMakeLists.txt
CMakeLists.txt
==============
CMakeLists.txt:15,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:17,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:61,70: [C0307] Bad indentation:
                                               )
  ^----BodyNode: 1:0->IfBlockNode: 59:0->BodyNode: 59:11->StatementNode: 60:2->TreeNode: 61:70

CMakeLists.txt:66,02: [C0113] Missing COMMENT in statement which allows it

Summary
=======
files scanned: 1
found lint:
  Convention: 4


real	0m0.144s
user	0m0.103s
sys	0m0.043s

===============================================================================

Running: clang-format-16 -style=file -i ./collatz_conjecture.cpp ./collatz_conjecture_test.cpp ./collatz_conjecture.h

real	0m0.022s
user	0m0.011s
sys	0m0.011s

===============================================================================

Running: ../../.github/citools/cpp/clang-check
clang-check-16 --analyze ./collatz_conjecture.cpp ./collatz_conjecture_test.cpp ./collatz_conjecture.h
error: argument unused during compilation: '-stdlib=libstdc++' [-Werror,-Wunused-command-line-argument]
error: invalid argument '-std=c++17' not allowed with 'C'
/home/vpayno/git_vpayno/exercism-workspace/cpp/collatz-conjecture/collatz_conjecture.h:4:10: fatal error: 'stdexcept' file not found
#include <stdexcept>
         ^~~~~~~~~~~
1 error generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/collatz-conjecture/collatz_conjecture.h.

real	0m0.498s
user	0m0.465s
sys	0m0.033s


real	0m0.500s
user	0m0.466s
sys	0m0.034s

===============================================================================

Running: ../../.github/citools/cpp/clang-tidy | head -n 100
11416 warnings generated.
46799 warnings generated.
46799 warnings and 3 errors generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/collatz-conjecture/collatz_conjecture.h.
Suppressed 46804 warnings (46799 in non-user code, 5 NOLINT).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
Found compiler error(s).

real	0m6.449s
user	0m6.394s
sys	0m0.054s
Running: clang-tidy-16 ./collatz_conjecture.cpp ./collatz_conjecture_test.cpp ./collatz_conjecture.h
error: invalid argument '-std=c++17' not allowed with 'C' [clang-diagnostic-error]
error: argument unused during compilation: '-stdlib=libstdc++' [clang-diagnostic-unused-command-line-argument]
/home/vpayno/git_vpayno/exercism-workspace/cpp/collatz-conjecture/collatz_conjecture.h:4:10: error: 'stdexcept' file not found [clang-diagnostic-error]
#include <stdexcept>
         ^~~~~~~~~~~


real	0m6.451s
user	0m6.395s
sys	0m0.056s

===============================================================================

